apps/syncthing/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  revisionHistoryLimit: 0
  serviceName: syncthing
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/syncthing/config"
            server: 10.10.20.10
        - name: data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/syncthing/data"
            server: 10.10.20.10
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:v2.1.6-ls231@sha256:8a381a5a11225475cc4a14ad4fee7c627fdc4fa5804fe3a34febe3aeda9f4e23
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /rest/noauth/health
              port: 8384
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: 8384
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
          ports:
            - containerPort: 8384
            - containerPort: 22000
            - containerPort: 21027
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
