apps/syncthing/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.20.55
  externalTrafficPolicy: Local
  selector:
    app: syncthing
  ports:
    - name: web
      protocol: TCP
      port: 8384
      targetPort: 8384
    - name: sync-tcp
      protocol: TCP
      port: 22000
      targetPort: 22000
    - name: sync-udp
      protocol: UDP
      port: 22000
      targetPort: 22000
    - name: discovery
      protocol: UDP
      port: 21027
      targetPort: 21027
